<resources>
    <!-- App Name -->
    <string name="app_name_login">Weather App</string>
    <string name="app_title_name">Sign in to your account</string>
    <string name="app_name_regis">Create Account</string>
    <string name="btn_regis">Create</string>
    <string name="app_name">Weather App</string>



    <!-- Signup Specific -->
    <string name="signup_button">Sign Up</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="repassword_hint">Re-enter your password</string>
    <string name="phone_hint">Mobile</string>
    <string name="error_password_not_match">Passwords do not match</string>
    <string name="error_phone_required">Phone number is required</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="toast_register_successful">Register Successful</string>

    <!-- Login Specific -->
    <string name="Sign_in_text">Sign In</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="toast_login_successful">Login Successful</string>
    <string name="toast_login_unsuccessful">Login Fail ?</string>
    <string name="error_password_required">Password is required</string>
    <string name="new_user_prompt">Dont have an account? Sign-up here?</string>
    <string name="email">Email</string>
    <string name="pword">Password</string>

    <string name="notification">Notification</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>



    <string name="common_error">Some thing went wrong!!!</string>
    <string name="degree">27°C</string>
    <string name="high_pressure">H:32°</string>
    <string name="low_pressure">L:24°</string>
    <string name="more_details">More details</string>
</resources>
